--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,8 @@ text-align: center;}
   a:hover{color:yellow;}
 
   .img-circle {
-    width: 150px;
-    height: 150px;
+    min-width: 150px;
+    min-height: 150px;
     border-radius: 50%;
     padding: 30px;
 }
